src/objects/LBI__AccountToRecalculate__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts To Recalculate</relationshipLabel>
        <relationshipName>Accounts_To_Recalculate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__IsEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__RecalcJobId__c</fullName>
        <label>RecalcJobId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account To Recalculate</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__RecalcJobId__c</columns>
        <columns>LBI__IsEngine__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000000000}</displayFormat>
        <label>Account To Recalculate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts To Recalculate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>